--- a/infinia/index.html
+++ b/infinia/index.html
@@ -15,8 +15,9 @@
     </div>
     <input type="text" class="chat-input" id="message-input" placeholder="Type a message...">
     <button class="send-button" onclick="initChat()">Send</button>
+     <input type="file" class="chat-input" id="image-input" accept="image/*">
+    <button class="send-button" onclick="initImage()">Add Image</button>
 </div>
-
 
 </body>
 </html>
